# AutoFilm

./: .dockerignore  .gitignore  .gitmodules  .goreleaser.yaml  Cargo.toml  Dockerfile  README.md  README_API.md  build.rs  requirements.txt
.agents/git-commit-message/: SKILL.md
.agents/skills/git-atomic-commit/: SKILL.md
.agents/skills/rust-modern-modules/: SKILL.md
.agents/skills/rust-modern-modules/agents/: openai.yaml
.github/workflows/: build-binary.yaml  build-docker.yaml  build.yaml  dev.yaml  release.yaml  rustfmt-check.yaml  style.yaml  test.yaml
app/: run.py  version.py
app/core/: config.py
app/modules/: api.py
app/modules/alist/v3/: client.py  path.py
app/modules/alist2strm/: alist2strm.py  mode.py  strm_protection.py
app/modules/ani2alist/: ani2alist.py
app/modules/libraryposter/: poster.py
app/utils/: __init__.py  http.py
config/: config.example.yaml  config.yaml.example
docker/: Dockerfile  Dockerfile.ci  Dockerfile.goreleaser
src/: alist.rs  alist2strm.rs  ani2alist.rs  app_info.rs  args.rs  config.rs  extensions.rs  logging.rs  main.rs  schedule.rs
src/alist2strm/: config.rs  errors.rs  mod.rs  path.rs  protection.rs  runner.rs  summary.rs  utils.rs
src/ani2alist/: config.rs  runner.rs  url_tree.rs  utils.rs
src/logging/: daily_file_appender.rs
src/schedule/: utils.rs
