[package]
name = "autofilm"
version = "2.0.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
alist = { package = "alist-client-rs", path = "alist-client-rs" }
futures-util = "0.3.32"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["http2", "rustls-tls", "stream"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal", "time"] }
tokio-cron-scheduler = "0.15.1"
urlencoding = "2.1.3"
